@@ -7,6 +7,7 @@ import sys
 
 import pytest
 import reprotest
+import reprotest.build
 
 REPROTEST = [sys.executable, "-m", "reprotest", "--no-diffoscope"]
 REPROTEST_TEST_SERVERS = os.getenv("REPROTEST_TEST_SERVERS", "null").split(",")
@@ -15,11 +16,12 @@ REPROTEST_TEST_DONTVARY = os.getenv("REPROTEST_TEST_DONTVARY", "").split(",")
 if REPROTEST_TEST_DONTVARY:
     REPROTEST += ["--dont-vary", ",".join(REPROTEST_TEST_DONTVARY)]
 
-TEST_VARIATIONS = frozenset(reprotest.VARIATIONS.keys()) - frozenset(REPROTEST_TEST_DONTVARY)
+TEST_VARIATIONS = frozenset(reprotest.build.VARIATIONS.keys()) - frozenset(REPROTEST_TEST_DONTVARY)
 
 def check_return_code(command, virtual_server, code):
     try:
-        retcode = reprotest.check(command, 'artifact', virtual_server, 'tests', variations=TEST_VARIATIONS)
+        retcode = reprotest.check(command, 'artifact', virtual_server, 'tests',
+            variations=reprotest.build.Variations.default(TEST_VARIATIONS))
     except SystemExit as system_exit:
         retcode = system_exit.args[0]
     finally:
@@ -59,7 +61,7 @@ def test_simple_builds(virtual_server):
     check_return_code('python3 mock_build.py irreproducible', virtual_server, 1)
 
 # TODO: test all variations that we support
-@pytest.mark.parametrize('captures', list(reprotest.VARIATIONS.keys()))
+@pytest.mark.parametrize('captures', list(reprotest.build.VARIATIONS.keys()))
 def test_variations(virtual_server, captures):
     expected = 1 if captures in TEST_VARIATIONS else 0
     check_return_code('python3 mock_build.py ' + captures, virtual_server, expected)
