@@ -24,5 +24,5 @@ deps =
 #  pytest-cov
   pytest
 # commands = py.test --cov-report html --cov=reprotest tests/tests.py
-commands = {envpython} -m coverage run --omit .tox/* --parallel -m py.test {posargs} tests/tests.py
+commands = {envpython} -m coverage run --omit .tox/* --parallel -m py.test {posargs} tests/
 # commands = py.test {posargs} tests/tests.py
